login and register implemented

--- a/src/main/resources/templates/public/home.html
+++ b/src/main/resources/templates/public/home.html
@@ -10,8 +10,9 @@
 <div class="container">
     <h1>Welcome to MediTracker</h1>
     <p>Manage your users and track medical information.</p>
-    <a href="/person/display" class="btn">Add User</a>
+    <a href="/user/display" class="btn">Add User</a>
     <a href="/medicine/all" class="btn">Manage Medicines</a>
+    <a href="/patients" class="btn">List Patients</a>
 </div>
 </body>
 </html>
